tests/golden/type_errors/map_remove_non_map.cd
remove(1, "a");
