tests/golden/type_errors/map_remove_non_map.err
Type error at 1:14: remove expects map as first argument, got number
  remove(1, "a");
               ^
